added form functionality

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>Feel free to contact me on these platforms or send a message below.</p>
-							<form method="post" action="#">
+							<form method="post" action="form-handler.php">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
