--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="index.html">About Me</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<!-- <li><a href="elements.html">Elements</a></li> -->
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
