commented out 3rd and 4th projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">A bit about me</h2>
-										<p>I am 35 years old, married with two children, Layla 2 years old and James 5 months old.</p>
+										<p>I am 35 years old, my wifes name is Heather and we have two children, Layla 2 years old and James 6 months old.  
+										</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -78,7 +79,7 @@
 									<a href="#" class="image"><img src="images/book.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Education/Employment</h2>
-										<p>I graduated DevPoint Labs in fall 2022.	I have experience in: JavaScript, Ruby on Rails, CSS, SQL, React, RESTful API, React on Rails, ES6, Git & GitHub.</p>
+										<p>I have been taking web developement courses online for over 2 years now. I graduated from DevPoint Labs full-stack developer camp with the fall cohort of 2022.	I have experience in: JavaScript, Ruby, Ruby on Rails, CSS, SQL, MYSQL, RESTful API, React, React on Rails, ES6, Git & GitHub.</p>
 										<a href="https://docs.google.com/document/d/0Bx-69JK8lGk5WU80WUxBVkNfNUJRLUUwRXkwWEJySVdSTXNJ/edit?usp=sharing&ouid=107842728311974564816&resourcekey=0-kjo1TkUjesY2zyd2eyu6Rg&rtpof=true&sd=true" class="special">View Resumé</a>
 									</div>
 								</div>
@@ -102,7 +103,7 @@
 											<p>Simple casino games built in just ruby and run in the terminal.</p>
 											<a href="https://github.com/cgreen6/Casino_project" class="special">View GitHub Repo</a>
 										</article>
-										<article>
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3 class="major">Ante fermentum</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
@@ -113,7 +114,7 @@
 											<h3 class="major">Fusce consequat</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
-										</article>
+										</article> -->
 									</section>
 									<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
