removed learn more button on about me

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<h2 class="major">A bit about me</h2>
 										<p>I am 35 years old, my wifes name is Heather and we have two children, Layla 2 years old and James 6 months old.  
 										</p>
-										<a href="#" class="special">Learn more</a>
+										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
